# crudite

./: .gitignore  Cargo.toml  README.md  dump.rdb  package.json
src/: Demo.res  main.rs
